force-app/main/default/objects/Account/fields/AccountInactivationDate__c.field-meta.xml
<CustomField>
    <fullName>AccountInactivationDate__c</fullName>
    <description>Indicate the date when the account has been moved to &quot;Inactivated customer&quot;</description>
    <label>Account inactivation date</label>
    <type>Date</type>
</CustomField>