force-app/main/default/objects/Account/fields/AccountPriorityTier__c.field-meta.xml
<CustomField>
    <fullName>AccountPriorityTier__c</fullName>
    <label>Account Priority (Tier)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tier 0</fullName>
            </value>
            <value>
                <fullName>Tier 1</fullName>
            </value>
            <value>
                <fullName>Tier 2</fullName>
            </value>
            <value>
                <fullName>Tier 3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>