force-app/main/default/objects/Account/fields/AccountStatus__c.field-meta.xml
<CustomField>
    <fullName>AccountStatus__c</fullName>
    <description>Represent the account status, displayed on a Business AND Partner Account</description>
    <label>Account Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Target</fullName>
                <default>true</default>
                <label>Target</label>
            </value>
            <value>
                <fullName>Prospect</fullName>
            </value>
            <value>
                <fullName>Customer</fullName>
            </value>
            <value>
                <fullName>Inactive customer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>