force-app/main/default/objects/Account/fields/BusinessReviewSegment__c.field-meta.xml
<CustomField>
    <fullName>BusinessReviewSegment__c</fullName>
    <description>Field to track the Annual Business Segmentation review. 
Only editable by specific personas</description>
    <label>Business Review Segment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>AccountSegment</valueSetName>
    </valueSet>
</CustomField>