force-app/main/default/objects/Account/fields/CascadingPending__c.field-meta.xml
<CustomField>
    <fullName>CascadingPending__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if we have to process all descendant accounts of this account to cascade Segment/ Root Parent/ Ultimate Account details.</description>
    <label>Cascading Pending</label>
    <type>Checkbox</type>
</CustomField>