force-app/main/default/objects/Account/fields/CoMarketingPlanDeveloped__c.field-meta.xml
<CustomField>
    <fullName>CoMarketingPlanDeveloped__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Co-Marketing Plan Developed</description>
    <label>Co-Marketing Plan Developed</label>
    <type>Checkbox</type>
</CustomField>