force-app/main/default/objects/Account/fields/CompanyRevenue__c.field-meta.xml
<CustomField>
    <fullName>CompanyRevenue__c</fullName>
    <description>Company revenue</description>
    <label>Company Revenue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>