force-app/main/default/objects/Account/fields/DaysSinceAccountInactivation__c.field-meta.xml
<CustomField>
    <fullName>DaysSinceAccountInactivation__c</fullName>
    <description>Indicate the number of day since the account has been inactivated (based on field &apos;Account status&apos;)</description>
    <formula>Today() - AccountInactivationDate__c</formula>
    <label>Days since Account Inactivation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>