force-app/main/default/objects/Account/fields/ExecutivesAligned__c.field-meta.xml
<CustomField>
    <fullName>ExecutivesAligned__c</fullName>
    <description>Executives aligned</description>
    <label>Executives Aligned</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CPO</fullName>
            </value>
            <value>
                <fullName>CRO</fullName>
            </value>
            <value>
                <fullName>CMO</fullName>
            </value>
            <value>
                <fullName>RVP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>