force-app/main/default/objects/Account/fields/Geography__c.field-meta.xml
<CustomField>
    <fullName>Geography__c</fullName>
    <description>Calculated by the system based on the country of the billing address of the account</description>
    <label>Geography</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Geography</valueSetName>
    </valueSet>
</CustomField>