force-app/main/default/objects/Account/fields/IntegrationServicesMenuDeveloped__c.field-meta.xml
<CustomField>
    <fullName>IntegrationServicesMenuDeveloped__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Integration or Services Menu Developed</description>
    <label>Integration or Services Menu Developed</label>
    <type>Checkbox</type>
</CustomField>