force-app/main/default/objects/Account/fields/JVPropositionBetterTogetherCompleted__c.field-meta.xml
<CustomField>
    <fullName>JVPropositionBetterTogetherCompleted__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Joint Value Proposition / Better Together completed</inlineHelpText>
    <label>JV Proposition/Better Together Completed</label>
    <type>Checkbox</type>
</CustomField>