force-app/main/default/objects/Account/fields/MotionType__c.field-meta.xml
<CustomField>
    <fullName>MotionType__c</fullName>
    <description>Motion type of Partner</description>
    <label>Motion / Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Strategic</fullName>
            </value>
            <value>
                <fullName>Focus</fullName>
            </value>
            <value>
                <fullName>Breadth</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>