force-app/main/default/objects/Account/fields/OnePager__c.field-meta.xml
<CustomField>
    <fullName>OnePager__c</fullName>
    <defaultValue>false</defaultValue>
    <label>OnePager</label>
    <type>Checkbox</type>
</CustomField>