force-app/main/default/objects/Account/fields/PartnerDeactivationReason__c.field-meta.xml
<CustomField>
    <fullName>PartnerDeactivationReason__c</fullName>
    <description>Reason why the Partner has been deactivated</description>
    <label>Partner Deactivation Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>aaa</fullName>
            </value>
            <value>
                <fullName>bbb</fullName>
            </value>
            <value>
                <fullName>ccc</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>