force-app/main/default/objects/Account/fields/PartnerProgramLevel__c.field-meta.xml
<CustomField>
    <fullName>PartnerProgramLevel__c</fullName>
    <description>Program level of the Partner</description>
    <label>Partner Program Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Member</fullName>
            </value>
            <value>
                <fullName>Select</fullName>
            </value>
            <value>
                <fullName>Premier</fullName>
            </value>
            <value>
                <fullName>Strategic</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>