force-app/main/default/objects/Account/fields/PartnerStatus__c.field-meta.xml
<CustomField>
    <fullName>PartnerStatus__c</fullName>
    <description>Represent the Partnership status of the account</description>
    <label>Partner Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Target</fullName>
                <default>true</default>
                <label>Target</label>
            </value>
            <value>
                <fullName>Partner</fullName>
            </value>
            <value>
                <fullName>Deactivated Partner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>