force-app/main/default/objects/Account/fields/PartnerSubType__c.field-meta.xml
<CustomField>
    <fullName>PartnerSubType__c</fullName>
    <label>Partner Sub Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>aaa</fullName>
            </value>
            <value>
                <fullName>bbb</fullName>
            </value>
            <value>
                <fullName>ccc</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>