force-app/main/default/objects/Account/fields/PartnerType__c.field-meta.xml
<CustomField>
    <fullName>PartnerType__c</fullName>
    <description>Type of Partner</description>
    <label>Partner Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Technology Partner</fullName>
            </value>
            <value>
                <fullName>Cloud Partner</fullName>
            </value>
            <value>
                <fullName>Solution Partner</fullName>
            </value>
            <value>
                <fullName>Business Partner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>