force-app/main/default/objects/Account/fields/PrimarySegment__c.field-meta.xml
<CustomField>
    <fullName>PrimarySegment__c</fullName>
    <description>Original segment of the account, calculated by the system. 
Can comes from lead qualification</description>
    <label>Primary Segment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>AccountSegment</valueSetName>
    </valueSet>
</CustomField>