force-app/main/default/objects/Account/fields/RootAccount__c.field-meta.xml
<CustomField>
    <fullName>RootAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Root Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts (Root Parent)</relationshipLabel>
    <relationshipName>Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>