force-app/main/default/objects/Account/fields/UltimateAccount__c.field-meta.xml
<CustomField>
    <fullName>UltimateAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ultimate Account</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Only Ultimate Account can be added.</errorMessage>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>UltimateAccount</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>