force-app/main/default/objects/Account/recordTypes/PartnerAccount.recordType-meta.xml
<RecordType>
    <fullName>PartnerAccount</fullName>
    <active>true</active>
    <description>Represents the Partners</description>
    <label>Partner Account</label>
</RecordType>