force-app/main/default/objects/Account/recordTypes/UltimateAccount.recordType-meta.xml
<RecordType>
    <fullName>UltimateAccount</fullName>
    <active>true</active>
    <label>Ultimate Account</label>
</RecordType>