force-app/main/default/objects/Account/validationRules/BillingCountryMissing.validationRule-meta.xml
<ValidationRule>
    <fullName>BillingCountryMissing</fullName>
    <active>true</active>
    <description>Verifies if the Billing Country field is populated, and if not, displays an error message.</description>
    <errorConditionFormula>AND(NOT($Permission.ByPassVR) ,ISBLANK(BillingCountry), NOT( RecordType.DeveloperName  = &apos;UltimateAccount&apos;))</errorConditionFormula>
    <errorDisplayField>BillingCountry</errorDisplayField>
    <errorMessage>Billing Country must be populated. Please provide a value for the Billing Country field.</errorMessage>
</ValidationRule>