force-app/main/default/objects/Account/listViews/OrgAccountHierarchy.listView-meta.xml
<ListView>
    <fullName>OrgAccountHierarchy</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>BusinessReviewSegment__c</columns>
    <columns>ACCOUNT.ADDRESS1_COUNTRY</columns>
    <columns>Geography__c</columns>
    <columns>Domain__c</columns>
    <columns>SessionByMonth__c</columns>
    <filterScope>Everything</filterScope>
    <label>Org Account Hierarchy</label>
</ListView>